# qt-tf-lite-example

./: CMakeLists.txt  LICENSE  README.md  main.cpp  model.cpp  model.h
.devcontainer/: devcontainer.json
docker/: Dockerfile
